--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,17 @@
 <p>home works!</p>
 <a routerLink="/products">products</a>
+
+<br />
+<div>
+  <!-- <h3>Forms with Email & Password</h3>
+ 
+    <form #customerForm="ngForm" (ngSubmit)="onSubmit(customerForm)">
+        <input type="text" [(ngModel)]="customerName" name="customerName"> 
+
+        <input type="text" [(ngModel)]="email" name="email"> 
+        <input type="text" [(ngModel)]="password" name="password"> 
+<button type="submit" [disabled]="!customerForm.form.valid">
+    Register
+</button> 
+    </form> -->
+</div>
