--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,7 +1,8 @@
-<p>home works!</p>
-<a routerLink="/products">products</a>
 
+<a routerLink="/products">products</a> <br>
+<a routerLink="/calculator">Calculator App</a>
 <br />
+
 <div>
   <!-- <h3>Forms with Email & Password</h3>
  
